--- a/styles.scss
+++ b/styles.scss
@@ -62,6 +62,12 @@ body {
 				padding: 0.5rem 3.75rem;
 				border: 0;
 				border-radius: 30px;
+				filter: drop-shadow(0px 5px 10px #56428d);
+			}
+			button:active,
+			button:hover {
+				background-color: var(--softMagenta);
+				color: white;
 			}
 		}
 	}
@@ -77,6 +83,11 @@ body {
 			font-size: 1rem;
 			color: white;
 		}
+		.fab:active,
+		.fab:hover {
+			border: 2px solid var(--softMagenta);
+			color: var(--softMagenta);
+		}
 		.fa-facebook-f {
 			padding: 0.5rem 0.75rem;
 		}
@@ -86,4 +97,9 @@ body {
 h1,
 button {
 	font-family: var(--poppins);
+}
+
+.fab,
+button {
+	cursor: pointer;
 }
