--- a/styles.scss
+++ b/styles.scss
@@ -103,3 +103,70 @@ button {
 button {
 	cursor: pointer;
 }
+
+@media (min-width: 768px) {
+	body {
+		background: url("./images/bg-desktop.svg");
+		background-color: var(--violet);
+		background-repeat: no-repeat;
+		width: 100%;
+		// height: 100%;
+		background-size: cover;
+	}
+
+	.container {
+		// margin: 5rem 2rem 5rem 2rem;
+		margin: 3rem 5rem 2rem 5rem;
+		flex-direction: column;
+		justify-content: space-between;
+		gap: 0rem;
+		height: 100vh;
+
+		.logo {
+			width: 12rem;
+			padding-bottom: 4rem;
+			align-self: flex-start;
+		}
+
+		.intro-section {
+			flex-direction: row;
+			justify-self: center;
+			gap: 2rem;
+			width: 100%;
+
+			img {
+				display: block;
+				width: 50%;
+				height: auto;
+				align-self: center;
+			}
+
+			.content-container {
+				flex-direction: column;
+				justify-content: center;
+				align-items: flex-start;
+				text-align: left;
+				width: 50%;
+				h1 {
+					font-size: 3rem;
+					max-width: 550px;
+				}
+				p {
+					font-size: 18px;
+					max-width: 520px;
+				}
+			}
+		}
+		.social-media-container {
+			justify-content: flex-end;
+		}
+	}
+}
+
+@media (min-width: 1200px) {
+	.container {
+		.intro-section {
+			gap: 4rem;
+		}
+	}
+}
